# ChangeLog for dev-python/tweepy
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  05 Jul 2010; James Rowe <jnrowe@gmail.com> tweepy-1.7.1.ebuild:
  Keyworded amd64.

*tweepy-1.7.1 (02 Jun 2010)

  02 Jun 2010; James Rowe <jnrowe@gmail.com> +tweepy-1.7.1.ebuild:
  Version bump [62c].

  25 Apr 2010; James Rowe <jnrowe@gmail.com> tweepy-1.6.ebuild:
  Keyworded x86.

  23 Apr 2010; James Rowe <jnrowe@gmail.com> tweepy-1.6.ebuild:
  Keyworded amd64.

  25 Mar 2010; James Rowe <jnrowe@gmail.com> tweepy-1.6.ebuild:
  Added a note about oauth dependency.

  25 Mar 2010; James Rowe <jnrowe@gmail.com> tweepy-1.6.ebuild:
  Keyworded ~x86.

*tweepy-1.6 (24 Mar 2010)

  24 Mar 2010; James Rowe <jnrowe@gmail.com> +tweepy-1.6.ebuild,
  +metadata.xml:
  Initial ebuild, by me.
