@@ -1,16 +1,14 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-DIST tweepy-1.6.tar.gz 19675 RMD160 2aa10bec655489e38f017e4ec3e2416ee950579d SHA1 cd4076a31c0a6aaf083749aba5f95d9287b5c2ff SHA256 858936d8b300d5993bb91af3fae2f06dfd00ede549545f0d944b0775fd6c5445
 DIST tweepy-1.7.1.tar.gz 19958 RMD160 3741c895d7352644d463218fd5fd2e492bd457b9 SHA1 dfd15e00bb8edd5e0f77cf4ccd90cf88f8f1ab65 SHA256 39f0b39be41bf00c00e2dae3c1e621908c3fada7a93b6a5012c28a4db1928c86
-EBUILD tweepy-1.6.ebuild 546 RMD160 be2de2bde70fbebf0a2d9052b472ba59cd3d9c3c SHA1 776b6918c245780a6e2f96d67a20dd1e9fa6c999 SHA256 ef8aa31c1691df835c95561d7755670e5ff70e0669f9b9a8d3627493d5c5c7d1
-EBUILD tweepy-1.7.1.ebuild 539 RMD160 911cf950e04f0ec6b6de3147d93b0d3aca5fafbd SHA1 947fe5fa1d5379b1b36e491e49c42bd4e3de6ba2 SHA256 b7ef4ab8177a0a3df66b7d5bea9c094f12681d40e29d40549d8da0e499ef2cfd
-MISC ChangeLog 811 RMD160 3b9ef77b9ae4a2f35715af63325e873f9414e985 SHA1 b848a00383919c8acec49bbf50809f573978ec8c SHA256 4a85b2b3767f8d1c992b6fa2e1161c988689ca197ccacbda826ec74672ded5d3
+EBUILD tweepy-1.7.1.ebuild 538 RMD160 acc73a5c43ee6270e6c540d1ff339a2f23628301 SHA1 8976db8a53b143b385b7c4c639944ce242509a03 SHA256 d87e35e370f514939853563f81143de0ffce58de83e9d5daa226b957744505bd
+MISC ChangeLog 917 RMD160 166c2de30f9681b79d6d5ffd420235f3ae25f5b5 SHA1 87b134824d3720176d0a64de6830f6e36207997f SHA256 61a2afcb7c8131853b46f7f2e3ee0e586a2167cda8970ec7801bc677ef7bf875
 MISC metadata.xml 803 RMD160 f4f02f48796652fa398f7bc74c420a2b69717e64 SHA1 01a249ad1d605c667c46b9d49cd8e2b5b26b28e3 SHA256 17d1eefbf79e84b2eeaf781278ef6d915ec775af4f024ccbf9c00453c1712cf0
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.15 (GNU/Linux)
 
-iEYEARECAAYFAkwxpDMACgkQzJrj3cAXR0n5CgCbBpfOgF6+HZ92yl8Ugod07070
-+FcAnjNcqP5qXu/XdgwgpHN0e8EcQwk1
-=aDga
+iEYEARECAAYFAkwyEfsACgkQzJrj3cAXR0mUZACfflK3DzQrGsiuDtsX1Am5E9Lq
+vw0AoLJ4YdSlj6rEUCf+6QoakFoYRM8R
+=4h+k
 -----END PGP SIGNATURE-----
