@@ -1,22 +1,0 @@
->=app-admin/eselect-python-20091230 || ( =dev-lang/python-2.7* =dev-lang/python-2.6* =dev-lang/python-2.5* )
-|| ( >=dev-lang/python-2.6 dev-python/simplejson ) >=app-admin/eselect-python-20091230 || ( =dev-lang/python-2.7* =dev-lang/python-2.6* =dev-lang/python-2.5* )
-0
-http://pypi.python.org/packages/source/t/tweepy/tweepy-1.6.tar.gz
-
-http://pypi.python.org/pypi/tweepy/
-MIT
-Twitter library for python
-amd64 x86
-distutils eutils jnrowe-pypi multilib portability python toolchain-funcs
-
-
-
-
-2
-
-compile install postinst postrm prepare
-
-
-
-
-
