@@ -6,7 +6,7 @@ http://pypi.python.org/packages/source/t/tweepy/tweepy-1.7.1.tar.gz
 http://pypi.python.org/pypi/tweepy/
 MIT
 Twitter library for python
-amd64 ~x86
+amd64 x86
 distutils eutils jnrowe-pypi multilib portability python toolchain-funcs
 
 
