@@ -1,5 +1,4 @@
 REM 2010-07-02 *1 +1 UNTIL 2038-01-19 MSG Stabilise x86 dev-util/ccontrol-1.0 %a
-REM 2010-07-02 *1 +1 UNTIL 2038-01-19 MSG Stabilise x86 dev-python/tweepy-1.7.1 %a
 REM 2010-07-03 *1 +1 UNTIL 2038-01-19 MSG Stabilise amd64 app-misc/taskwarrior-1.9.1 %a
 REM 2010-07-03 *1 +1 UNTIL 2038-01-19 MSG Stabilise x86 app-misc/taskwarrior-1.9.1 %a
 REM 2010-07-03 *1 +1 UNTIL 2038-01-19 MSG Stabilise amd64 dev-python/lettuce-0.1_rc12 %a
