@@ -2,6 +2,10 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  05 Jul 2010; James Rowe <jnrowe@gmail.com> -tweepy-1.6.ebuild,
+  tweepy-1.7.1.ebuild:
+  Keyworded x86.
+
   05 Jul 2010; James Rowe <jnrowe@gmail.com> tweepy-1.7.1.ebuild:
   Keyworded amd64.
 
